--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ distlib==0.4.0
 dj-database-url==3.0.1
 Django==5.2.5
 filelock==3.19.1
+gunicorn==21.2.0
 iniconfig==2.1.0
 mysqlclient==2.2.7
 packaging==25.0
@@ -13,9 +14,9 @@ psycopg2==2.9.11
 psycopg2-binary==2.9.11
 Pygments==2.19.2
 pytest==8.4.2
+python-dotenv==1.2.1
 sqlparse==0.5.3
 tzdata==2025.2
 unicorn==2.1.4
 virtualenv==20.34.0
 whitenoise==6.11.0
-gunicorn==21.2.0
