--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ psycopg2==2.9.11
 psycopg2-binary==2.9.11
 Pygments==2.19.2
 pytest==8.4.2
+python-dateutil==2.9.0.post0
 python-dotenv==1.2.1
 sqlparse==0.5.3
 tzdata==2025.2
